--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
   ansible.builtin.assert:
     that: >
       (ansible_facts["distribution"] == "Debian")
-      or (ansible_facts["distribution"] == "Ubuntu")'
+      or (ansible_facts["distribution"] == "Ubuntu")
 
 - name: Install unattended upgrades
   ansible.builtin.package:
