--- a/.github/workflows/ansible_lint.yml
+++ b/.github/workflows/ansible_lint.yml
@@ -1,7 +1,7 @@
 ---
 name: Linting
 
-on: # yamllint disable-line rule:truthy
+on:  # yamllint disable-line rule:truthy
   - push
   - pull_request
 
@@ -21,7 +21,7 @@ jobs:
 
       - name: yamllint
         run: |
-          yamllint .
+          yamllint --strict .
 
       - name: ansible-lint
         run: |
